--- a/templates/game-menu.html
+++ b/templates/game-menu.html
@@ -71,95 +71,10 @@
             {% endfor %}
         </div>
     </div>
-    <!-- Pop-up del carrito de compras
-    <div class="popup" id="shoppingCartPopup">
-        <div class="popup-content">
-            <span class="close-btn" onclick="closePopup()">&times;</span>
-            <h2>Carrito de compras 🛒</h2>
-            <a href="#" class="remove-all">Remover todo</a>
-            <table class="cart-table">
-                <thead>
-                    <tr>
-                        <th>Descripción</th>
-                        <th>Cantidad</th>
-                        <th>Quitar</th>
-                        <th>Precio</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="cart-item">
-                        <td>
-                            <div class="item-details">
-                                <img src="../static/images/food3.jpg" alt="Pasta Fettucinne" class="item-image">
-                                <div class="item-info">
-                                    <h3>Pasta Fettucinne</h3>
-                                    <p>Plato</p>
-                                    <span class="veg-icon"></span>
-                                </div>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="item-quantity">
-                                <button class="quantity-btn">+</button>
-                                <span class="quantity">2</span>
-                                <button class="quantity-btn">-</button>
-                            </div>
-                        </td>
-                        <td>
-                            <a href="#" class="remove">Quitar</a>
-                        </td>
-                        <td>
-                            <p>15 Bs.</p>
-                        </td>
-                    </tr>
-                    <tr class="cart-item">
-                        <td>
-                            <div class="item-details">
-                                <img src="../static/images/food2.jpg" alt="Tiramisú" class="item-image">
-                                <div class="item-info">
-                                    <h3>Tiramisú</h3>
-                                    <p>1 porción</p>
-                                    <span class="veg-icon"></span>
-                                </div>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="item-quantity">
-                                <button class="quantity-btn">+</button>
-                                <span class="quantity">1</span>
-                                <button class="quantity-btn">-</button>
-                            </div>
-                        </td>
-                        <td>
-                            <a href="#" class="remove">Quitar</a>
-                        </td>
-                        <td>
-                            <p>30 Bs.</p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="subtotal">
-                <p>Sub-Total</p>
-                <span class="items-count">2 Productos</span>
-                <span class="total-price">45 Bs.</span>
-            </div>
-            <div class="button-container">
-                <button class="checkout-btn">Pedir</button>
-            </div>
-        </div>
-    </div> -->
+   
 
     <script>
-        document.getElementById('cart-icon').addEventListener('click', function(event) {
-            event.preventDefault();
-            document.getElementById('shoppingCartPopup').style.display = 'block';
-        });
-
-        function closePopup() {
-            document.getElementById('shoppingCartPopup').style.display = 'none';
-        }
-
+        
         // Script para manejar el menú móvil
         document.getElementById('mobile-menu').addEventListener('click', function () {
             document.querySelector('.navbar-right').classList.toggle('active');
@@ -323,14 +238,14 @@
         font-size: 15px;
         margin-top: 10px;
     }
+    
 
     .game-card .tags {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin-top: 10px;
-        margin-bottom: 15px;
-        gap: 10px;
+        list-style: none;
+        padding: 10px;
+        background-color: #192847;
+        border-radius: 20px;
+        color: #FAF7E6;
     }
 
     .game-card .tags li {
@@ -408,225 +323,6 @@
         }
     }
 
-    /* Estilos para el pop-up del carrito */
-    .popup {
-        display: none;
-        position: fixed;
-        top: 50px;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1000;
-        overflow: auto;
-    }
-
-    .popup-content {
-        position: relative;
-        margin: 5% auto;
-        padding: 20px;
-        width: 80%;
-        background-color: #f4f4f4;
-        border-radius: 10px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    .close-btn {
-        position: absolute;
-        top: 10px;
-        right: 20px;
-        font-size: 24px;
-        cursor: pointer;
-        color: #000;
-    }
-
-    h2 {
-        margin-bottom: 20px;
-        color: #333;
-    }
-
-    .remove-all {
-        float: right;
-        color: red;
-        text-decoration: none;
-        margin-bottom: 10px;
-    }
-
-    .cart-table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 10px;
-    }
-
-    .cart-table th,
-    .cart-table td {
-        border: 1px solid #ddd;
-        padding: 10px;
-        text-align: center;
-        vertical-align: middle;
-    }
-
-    .cart-table th {
-        background-color: #192847;
-        color: #fff;
-    }
-
-    .cart-item {
-        vertical-align: middle;
-    }
-
-    .item-details {
-        display: flex;
-        align-items: center;
-    }
-
-    .item-image {
-        width: 50px;
-        height: 50px;
-        object-fit: cover;
-        margin-right: 10px;
-    }
-
-    .item-info {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .item-info h3 {
-        margin: 0;
-        font-size: 16px;
-        color: #333;
-    }
-
-    .item-info p {
-        margin: 5px 0;
-        font-size: 14px;
-        color: #666;
-    }
-
-    .veg-icon {
-        width: 10px;
-        height: 10px;
-        background-color: green;
-        display: inline-block;
-        border-radius: 50%;
-    }
-
-    .item-quantity {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .quantity-btn {
-        background-color: #192847;
-        color: #fff;
-        border: none;
-        padding: 5px 10px;
-        cursor: pointer;
-        border-radius: 5px;
-        margin: 0 5px;
-    }
-
-    .quantity {
-        width: 30px;
-        text-align: center;
-    }
-
-    .item-price p {
-        margin: 0;
-        font-size: 16px;
-        color: #333;
-    }
-
-    .remove {
-        color: rgb(165, 14, 14);
-        text-decoration: none;
-        font-size: 14px;
-        cursor: pointer;
-    }
-
-    .subtotal {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 20px 0;
-        border-top: 1px solid #ddd;
-        margin-top: 20px;
-    }
-
-    .subtotal p {
-        margin: 0;
-        font-size: 18px;
-        color: #333;
-    }
-
-    .items-count {
-        color: #777;
-    }
-
-    .total-price {
-        font-size: 24px;
-        color: #333;
-    }
-
-    .checkout-btn {
-        padding: 10px 20px;
-        background-color: #192847;
-        color: #fff;
-        font-size: 18px;
-        cursor: pointer;
-        text-align: center;
-        border: 3px solid #fff;
-        border-radius: 30px;
-        float: right;
-        margin-top: 10px;
-    }
-
-    .checkout-btn:hover {
-        background-color: #d48600;
-        color: #000;
-    }
-
-    .button-container {
-        display: flex;
-        justify-content: flex-end;
-        margin-top: 20px;
-    }
-
-    /* Responsivo para el pop-up del carrito */
-    @media screen and (max-width: 768px) {
-        .popup-content {
-            width: 95%;
-            padding: 10px;
-        }
-
-        .cart-table th,
-        .cart-table td {
-            padding: 5px;
-            font-size: 14px;
-        }
-
-        .item-info h3 {
-            font-size: 14px;
-        }
-
-        .item-info p {
-            font-size: 12px;
-        }
-
-        .subtotal p,
-        .total-price {
-            font-size: 20px;
-        }
-
-        .checkout-btn {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-        }
-    }
 </style>
 
 </html>
