--- a/templates/login.html
+++ b/templates/login.html
@@ -17,11 +17,8 @@
             <i class="fa fa-bars"></i>
         </div>
         <ul class="nav-items">
-            <li><a href="inicio.html">Inicio</a></li>
-            <li><a href="">Juegos</a></li>
-            <li><a href="">Comida</a></li>
-            <li><a href="">Reservas</a></li>
-            <li><a href="register.html">Registrarse</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="/register">Registrarse</a></li>
         </ul>
     </nav>
     <div class="container">
