--- a/templates/new_password.html
+++ b/templates/new_password.html
@@ -17,11 +17,8 @@
             <i class="fa fa-bars"></i>
         </div>
         <ul class="nav-items">
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Juegos</a></li>
-            <li><a href="">Comida</a></li>
-            <li><a href="">Reservas</a></li>
-            <li><a href="">Iniciar Sesion</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="/login">Iniciar Sesion</a></li>
         </ul>
     </nav>
     <div class="container">
