--- a/templates/perfil_admin.html
+++ b/templates/perfil_admin.html
@@ -43,8 +43,8 @@
             <i class="fa fa-bars"></i>
         </div>
         <ul class="nav-items">
-            <li><a href="/templates/adminpanel.html">Inicio</a></li>
-            <li><a href="/templates/inicio.html">Cerrar Sesión</a></li>
+            <li><a href="/adminpanel">Inicio</a></li>
+            <li><a href="/logout">Cerrar Sesión</a></li>
         </ul>
     </nav>
     <div class="container">
