--- a/templates/perfil_usuario.html
+++ b/templates/perfil_usuario.html
@@ -45,7 +45,7 @@
         </div>
         <ul class="nav-items">
             <li><a href="/inicio_usuario">Inicio</a></li>
-            <li><a href="/">Cerrar Sesión</a></li>
+            <li><a href="/logout">Cerrar Sesión</a></li>
         </ul>
     </nav>
     <div class="container">
