--- a/templates/agregar-pedido.html
+++ b/templates/agregar-pedido.html
@@ -120,11 +120,12 @@
             <span class="fas fa-bars"></span>
         </button>
         <div class="navbar-right">
-            <a href="/">Home</a>
-            <a href="#about">Sobre nosotros</a>
-            <a href="#menu">Menú</a>
-            <a href="#order">Ubicación</a>
-            <a href="/login">Iniciar Sesión</a>
+            <a href="/inicio_usuario">Home</a>
+            <a href="/food-menu">Menu</a>
+            <a href="/game-menu">Productos</a>
+            <a href="/user_reservations">Reservas</a>
+            <a href="/ver_pedidos">Pedidos</a>
+            <a href="/perfil_user"><i class="fas fa-user"></i></a>
         </div>
     </div>
     <div class="container">
