--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -17,11 +17,8 @@
             <i class="fa fa-bars"></i>
         </div>
         <ul class="nav-items">
-            <li><a href="inicio.html">Inicio</a></li>
-            <li><a href="game-menu.html">Juegos</a></li>
-            <li><a href="food-menu.html">Comida</a></li>
-            <li><a href="form-reserva.html">Reservas</a></li>
-            <li><a href="login.html">Iniciar Sesion</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="/login">Iniciar Sesion</a></li>
         </ul>
     </nav>
     <div class="container">
