--- a/templates/userpedidos.html
+++ b/templates/userpedidos.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalles del Pedido</title>
-    <link rel="stylesheet" href="../static/css/food-panel.css">
-    <link rel="stylesheet" href="../static/css/popup_panel.css">
-    <script src="https://kit.fontawesome.com/9c32bf538b.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+ <!-- Link icons -->
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+ <!-- Link fonts -->
+ <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+ <!-- Link css -->
+ <link rel="stylesheet" href="/static/css/inicio.css">
+ <link rel="stylesheet" href="/static/css/navbar.css">
+<link rel="stylesheet" href="../static/css/food-panel.css">
+<link rel="stylesheet" href="../static/css/popup_panel.css">
+<script src="https://kit.fontawesome.com/9c32bf538b.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <style>
         .container {
             padding: 20px;
@@ -46,6 +55,17 @@
         }
         .table-summary p {
             margin: 5px 0;
+        }
+        .recibo-btn {
+            display: block;
+            margin: 20px auto;
+            background-color: #d48600;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            width: 120px;
         }
     </style>
 </head>
@@ -102,6 +122,9 @@
         <div class="table-summary">
             <p><strong>Total:</strong> {{ total_pedido }} Bs.</p>
         </div>
+        {% if pedido.estado == 'Finalizado' %}
+        <button class="recibo-btn" onclick="window.location.href='/receipt_pedidoUser/{{ pedido.id_pedido }}'">Ver Recibo</button>
+        {% endif %}
     </div>
     <!-- Script Responsive Navbar -->
     <script>
